--- a/MusicManager.WpfApp/MainWindow.xaml
+++ b/MusicManager.WpfApp/MainWindow.xaml
@@ -4,9 +4,63 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicManager.WpfApp"
+        xmlns:vm="clr-namespace:MusicManager.WpfApp.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
+    <Window.DataContext>
+        <vm:MainViewModel x:Name="ViewModel"></vm:MainViewModel>
+    </Window.DataContext>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45"></RowDefinition>
+            <RowDefinition MinHeight="200"></RowDefinition>
+            <RowDefinition Height="45"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="25"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="30"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <TextBox Width="300" Margin="10 10 0 10" Text="{Binding Path=SearchTextAlbum, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+            <Button Width="100" Margin="10" Command="{Binding Path=DeleteAlbumCommand}" BorderBrush="Red" Background="WhiteSmoke">Delete</Button>
+            <Button Width="100" Margin="10" Command="{Binding Path=EditAlbumCommand}">Edit</Button>
+            <Button Width="100" Margin="10" Command="{Binding Path=AddAlbumCommand}">Add</Button>
+        </StackPanel>
 
+        <DataGrid Grid.Row="1" Grid.Column="1" 
+                  ItemsSource="{Binding Path=Albums}" 
+                  AutoGenerateColumns="False" 
+                  SelectionMode="Single"
+                  CanUserAddRows="False"
+                  IsReadOnly="True"
+                  SelectedItem="{Binding Path=SelectedAlbum}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Title" Binding="{Binding Path=Title}"/>
+                <DataGridTextColumn Width="*" Header="Interpret" Binding="{Binding Path=Interpreter}" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <TextBox Width="300" Margin="10 10 0 10" Text="{Binding Path=SearchTextTrack, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+            <Button Width="100" Margin="10" Command="{Binding Path=DeleteTrackCommand}" BorderBrush="Red" Background="WhiteSmoke">Delete</Button>
+            <Button Width="100" Margin="10" Command="{Binding Path=EditTrackCommand}">Edit</Button>
+            <Button Width="100" Margin="10" Command="{Binding Path=AddTrackCommand}">Add</Button>
+        </StackPanel>
+
+        <DataGrid Grid.Row="3" Grid.Column="1" 
+                  ItemsSource="{Binding Path=Tracks}" 
+                  AutoGenerateColumns="False" 
+                  SelectionMode="Single"
+                  CanUserAddRows="False"
+                  IsReadOnly="True"
+                  SelectedItem="{Binding Path=SelectedTrack}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Title" Binding="{Binding Path=Title}"/>
+                <DataGridTextColumn Width="*" Header="Interpret" Binding="{Binding Path=Interpreter}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
