Implemented add, edit and delete tracks.

--- a/MusicManager.WpfApp/MainWindow.xaml
+++ b/MusicManager.WpfApp/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MusicManager.WpfApp"
         xmlns:vm="clr-namespace:MusicManager.WpfApp.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="Music-Manager" Height="600" Width="800">
     <Window.DataContext>
         <vm:MainViewModel x:Name="ViewModel"></vm:MainViewModel>
     </Window.DataContext>
@@ -58,8 +58,8 @@
                   IsReadOnly="True"
                   SelectedItem="{Binding Path=SelectedTrack}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Title" Binding="{Binding Path=Title}"/>
-                <DataGridTextColumn Width="*" Header="Interpret" Binding="{Binding Path=Interpreter}" />
+                <DataGridTextColumn Header="Name" Binding="{Binding Path=Name}"/>
+                <DataGridTextColumn Width="*" Header="Composer" Binding="{Binding Path=Composer}" />
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
