--- a/MusicManager.WpfApp/TrackWindow.xaml
+++ b/MusicManager.WpfApp/TrackWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="MusicManager.WpfApp.AlbumWindow"
+﻿<Window x:Class="MusicManager.WpfApp.TrackWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:MusicManager.WpfApp.ViewModels"
         mc:Ignorable="d"
-        Title="AlbumWindow" Height="250" Width="600" WindowStartupLocation="CenterScreen">
+        Title="TrackWindow" Height="250" Width="600" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
-        <vm:AlbumViewModel x:Name="ViewModel"></vm:AlbumViewModel>
+        <vm:TrackViewModel x:Name="ViewModel"></vm:TrackViewModel>
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
@@ -25,11 +25,11 @@
             <ColumnDefinition Width="30"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Title:</Label>
-        <TextBox Grid.Row="1" Grid.Column="2" Margin="10" Text="{Binding Path=Title}"></TextBox>
+        <Label Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Name:</Label>
+        <TextBox Grid.Row="1" Grid.Column="2" Margin="10" Text="{Binding Path=Name}"></TextBox>
 
-        <Label Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Interpret:</Label>
-        <TextBox Grid.Row="2" Grid.Column="2" Margin="10" Text="{Binding Path=Interpreter}"></TextBox>
+        <Label Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Composer:</Label>
+        <TextBox Grid.Row="2" Grid.Column="2" Margin="10" Text="{Binding Path=Composer}"></TextBox>
 
         <StackPanel Grid.Row="4" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="100" Command="{Binding Path=SaveCommand}" Margin="10" IsDefault="True">Save</Button>
