--- a/MusicManager.WpfApp/TrackWindow.xaml
+++ b/MusicManager.WpfApp/TrackWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:MusicManager.WpfApp.ViewModels"
         mc:Ignorable="d"
-        Title="TrackWindow" Height="250" Width="600" WindowStartupLocation="CenterScreen">
+        Title="TrackWindow" Height="295" Width="600" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:TrackViewModel x:Name="ViewModel"></vm:TrackViewModel>
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="45"></RowDefinition>
             <RowDefinition Height="45"></RowDefinition>
             <RowDefinition Height="45"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
@@ -31,7 +32,10 @@
         <Label Grid.Row="2" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Composer:</Label>
         <TextBox Grid.Row="2" Grid.Column="2" Margin="10" Text="{Binding Path=Composer}"></TextBox>
 
-        <StackPanel Grid.Row="4" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <Label Grid.Row="3" Grid.Column="1" Margin="10" HorizontalAlignment="Right">Genre:</Label>
+        <ComboBox Grid.Row="3" Grid.Column="2" Margin="10" ItemsSource="{Binding Path=GenreList}" SelectedItem="{Binding Path=Genre}"></ComboBox>
+
+        <StackPanel Grid.Row="5" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="100" Command="{Binding Path=SaveCommand}" Margin="10" IsDefault="True">Save</Button>
             <Button Width="100"  Command="{Binding Path=CloseCommand}" Margin="10">Close</Button>
         </StackPanel>
